--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -90,7 +91,7 @@
     </p>
     <p class="greeting">Groetjes! - Yentl</p>
     <div class="button-container">
-      <a href="#" class="button">📜 Download CV</a>
+      <a href="./attachments/CV Yentl Vanderiviere 062025.pdf" class="button">📜 Download CV</a>
       <a href="https://www.yentlmusic.be/" class="button">👀 Bezoek website</a>
     </div>
     <div class="img-wrapper">
