Update background and staple opacity

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <title>Docent Met Talent</title>
   </head>
   <body>
-    <div class="background"><div class="staple"></div></div>
+    <div class="background"></div>
+    <div class="staple"></div>
     <h1>weldra beschikbaar: EX&#8209;DOCENT MET TALENT</h1>
     <p class="tagline">Ervaren hogeschooldocent zkt. nieuwe uitdaging</p>
     <p class="divider">***</p>
