Handle overflow on body element

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </p>
     <p>
       <strong class="permanent-marker-regular"
-        >Maar stilzitten is niets voor mij!</strong
+        >Maar stilzitten is niets voor mij !</strong
       >
-      Ik grijp deze gelegenheid aan om mijn ervaring en passie elders met veel
+      Ik&nbsp;grijp deze gelegenheid aan om mijn ervaring en passie elders met veel
       plezier in te zetten!
     </p>
 
