Update copywriting; Update spacing on page margins

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </p>
     <p>
       Niet door gebrek aan inzet of tevredenheid over mijn werk. Wel door een
-      verwarrend onderwijssysteem waar ancienniteit je meer zekerheid geeft dan
+      verwarrend onderwijssysteem waar ancienniteit je meer jobzekerheid oplevert dan
       individuele kwaliteiten.
     </p>
     <p>
