Update content: mention part-time function

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -83,6 +83,7 @@
       benut worden. Een plek waar ik kan groeien, inspireren en samen met
       anderen het verschil kan maken.
     </p>
+    <p>Mijn voorkeur gaat uit naar een deeltijdse functie: minimaal halftijds in de privésector of minimaal 3/5<sup>de</sup> in het hoger- of volwassenenonderwijs.</p>
     <p class="divider">***</p>
     <h2>Laten we kennismaken!</h2>
     <p>
