Update content under "Ik ben op zoek naar"

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <body>
     <div class="background"></div>
     <div class="staple"></div>
-    <h1>weldra beschikbaar: EX&#8209;DOCENT MET TALENT</h1>
+    <h1>weldra beschikbaar : EX&#8209;DOCENT MET TALENT</h1>
     <p class="tagline">Ervaren hogeschooldocent zkt. nieuwe uitdaging</p>
     <p class="divider">***</p>
     <p class="greeting">Hallo !</p>
     <p>
-      Mijn naam is Yentl. Na vier jaren van inzet en passie als docent in de
+      Mijn naam is Yentl Vanderiviere. Na vier jaren van inzet en passie als docent in de
       lerarenopleiding kleuter- en lager onderwijs, vakgebied muziek, sta ik
       vanaf september '25 onverwacht aan de zijlijn.
     </p>
@@ -39,7 +39,7 @@
     </p>
 
     <p class="divider">***</p>
-    <h2>Dit ben ik:</h2>
+    <h2>Dit ben ik :</h2>
 
     <img class="banner-img" src="./img/bannerjpg.jpg" alt="" />
     <h3>* Muzikale Vakvrouw 🎙️🎹🎺</h3>
@@ -77,15 +77,14 @@
       communicatie, cultuur, tekstredactie, en meer.
     </p>
     <p class="divider">***</p>
-    <h2>Ik ben op zoek naar...</h2>
+    <h2>Ik ben op zoek naar ...</h2>
     <p>
-      Een eerlijk betaalde job waar inzet, passie en talent écht gewaardeerd en
-      benut worden. Een plek waar ik kan groeien, inspireren en samen met
-      anderen het verschil kan maken.
+      Een eerlijk betaalde job waar inzet, passie en talent écht gewaardeerd en benut worden. Dat mag zeker ook buiten het onderwijs zijn! </p>
+    <p>Ik zoek een plek waar ik kan groeien, inspireren en samen met anderen het verschil kan maken.
     </p>
-    <p>Mijn voorkeur gaat uit naar een deeltijdse functie: minimaal halftijds in de privésector of minimaal 3/5<sup>de</sup> in het hoger- of volwassenenonderwijs.</p>
+    <p>Mijn voorkeur gaat uit naar een deeltijdse functie: minimaal halftijds in de privésector of minimaal 3/5<sup>de</sup> in het onderwijs.</p>
     <p class="divider">***</p>
-    <h2>Laten we kennismaken!</h2>
+    <h2>Laten we kennismaken !</h2>
     <p>
       Nieuwsgierig naar wat ik voor je organisatie kan betekenen?<br />Mail naar
       <a href="mailto:info@yentlmusic.be">info@yentlmusic.be</a> en laten we
