--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
     <title>Docent Met Talent</title>
   </head>
   <body>
+
+    <!-- Background -->
     <div class="background"></div>
     <div class="staple"></div>
+    
+    <!-- Hero -->
     <h1>weldra beschikbaar : EX&#8209;DOCENT MET TALENT</h1>
     <p class="tagline">Ervaren hogeschooldocent zkt. nieuwe uitdaging</p>
     <p class="divider">* * *</p>
+    
+    <!-- Intro -->
     <p class="greeting">Hallo !</p>
     <p>
       Mijn naam is Yentl Vanderiviere. Na vier jaren van inzet en passie als docent in de
@@ -38,9 +44,9 @@
       plezier in te zetten!
     </p>
 
+    <!-- About Me -->
     <p class="divider">* * *</p>
     <h2>Dit ben ik :</h2>
-
     <img class="banner-img" src="./img/bannerjpg.jpg" alt="" />
     <h3>* Muzikale Vakvrouw 🎙️🎹🎺</h3>
     <p>
@@ -76,13 +82,17 @@
       niet beperkt tot het muziekonderwijs: ik ben inzetbaar in educatie, online
       communicatie, cultuur, tekstredactie, en meer.
     </p>
+
+    <!-- Job Search -->
     <p class="divider">* * *</p>
-    <h2>Ik ben op zoek naar ...</h2>
-    <p>
-      Een eerlijk betaalde job waar inzet, passie en talent écht gewaardeerd en benut worden. Dat mag zeker ook buiten het onderwijs zijn! </p>
-    <p>Ik zoek een plek waar ik kan groeien, inspireren en samen met anderen het verschil kan maken.
-    </p>
-    <p>Mijn voorkeur gaat uit naar een deeltijdse functie: minimaal halftijds in de privésector of minimaal 3/5<sup>de</sup> in het onderwijs.</p>
+<h2>Ik ben op zoek naar ...</h2>
+<p>
+  Een eerlijk betaalde job waar inzet, passie en talent écht gewaardeerd en benut worden.
+  Ik sta open voor verschillende soorten jobs en sectoren: zowel in het <strong>onderwijs</strong>, mits het gaat om hoger onderwijs of volwassenenonderwijs, als daarbuiten in de <strong>privésector</strong>. Ik zoek bovenal een plek waar ik kan groeien, inspireren en samen met anderen het verschil kan maken.
+</p>
+<p>Mijn voorkeur gaat uit naar een deeltijdse functie: minimaal halftijds in de privésector of minimaal 3/5<sup>de</sup> in het onderwijs.</p>
+
+    <!-- Connect -->
     <p class="divider">* * *</p>
     <h2>Laten we kennismaken !</h2>
     <p>
@@ -95,6 +105,8 @@
       <a href="./attachments/CV Yentl Vanderiviere 062025.pdf" class="button">📜 Download CV</a>
       <a href="https://www.yentlmusic.be/" class="button">👀 Bezoek website</a>
     </div>
+
+    <!-- Images -->
     <div class="img-wrapper">
       <img src="./img/choir-director.jpg" alt="" />
       <img src="./img/speeching.jpg" alt="" />
